# job-sites-parser

./: README.md  main.py  pyproject.toml
src/: hh.py  job_site.py  json_saver.py  saver.py  superjob.py  utils.py  vacancy.py
