[tool.poetry]
name = "job-sites-parser"
version = "0.1.0"
description = ""
authors = ["miroshnikoff <taxi83080@gmail.com>"]
readme = "README.md"
packages = [{include = "job_sites_parser"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
